@@ -71,6 +71,7 @@ Regres        Regression
 Detrend       Regression
 Trend         Regression
 Subtrend      Regression
+Tests         Tests
 Remapgrid     Interpolation
 Genweights    Interpolation
 Remap         Interpolation
