@@ -29,7 +29,7 @@ extern "C" {
 #define  FILETYPE_GRB             1   /* File type GRIB                       */
 #define  FILETYPE_GB2             2   /* File type GRIB version 2             */
 #define  FILETYPE_NC              3   /* File type netCDF                     */
-#define  FILETYPE_NC2             4   /* File type netCDF version 2           */
+#define  FILETYPE_NC2             4   /* File type netCDF version 2 (64-bit)  */
 #define  FILETYPE_NC4             5   /* File type netCDF version 4 (classic) */
 #define  FILETYPE_SRV             6   /* File type SERVICE                    */
 #define  FILETYPE_EXT             7   /* File type EXTRA                      */
